// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ImageText
    block={
        Object {
            "fields": Object {
              "backgroundColor": "foo",
              "image": Object {
                "fields": Object {
                  "file": Object {
                    "contentType": "foo",
                    "details": Object {
                      "image": Object {
                        "height": 0,
                        "width": 0,
                      },
                      "size": 0,
                    },
                    "fileName": "foo",
                    "url": "foo",
                  },
                  "title": "foo",
                },
                "sys": Object {
                  "createdAt": "foo",
                  "environment": Object {
                    "sys": Object {
                      "id": "foo",
                      "linkType": "foo",
                      "type": "foo",
                    },
                  },
                  "id": "foo",
                  "locale": "foo",
                  "revision": 0,
                  "space": Object {
                    "sys": Object {
                      "id": "foo",
                      "linkType": "foo",
                      "type": "foo",
                    },
                  },
                  "type": "foo",
                  "updatedAt": "foo",
                },
              },
              "imagePosition": 0,
              "text": "foo",
              "title": "foo",
            },
          }
    }
    setRef={[Function]}
    z={0}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="flex container-width py4"
>
        <div
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
                className="md-col-6 flex flex-column justify-center col-12"
=======
                className="flex flex-column justify-center col-12 md-col-6"
>>>>>>> Fix test according to data change
=======
                className="md-col-6 flex flex-column justify-center col-12"
>>>>>>> Fix ProductHero test
        >
                <h2
                        className="block-headline mb3"
                >
                        foo
                </h2>
                <p
                        className="block-subheadline"
                        dangerouslySetInnerHTML={
                                Object {
                                        "__html": "<p>foo</p>
                                ",
                                      }
                        }
                />
        </div>
        <Image
                alt="foo illustration"
                bg={false}
                className="z-overlay col-4 mt2"
                onImgLoad={[Function]}
                src="foo?w=1400&fm=png&q=90"
                style={
                        Object {
                                "transform": "translateY(0%)",
                              }
                }
        />
</div>,
      "className": "flex flex-row justify-center drip",
      "style": Object {
        "zIndex": 0,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
<<<<<<< HEAD
<<<<<<< HEAD
            className="md-col-6 flex flex-column justify-center col-12"
=======
            className="flex flex-column justify-center col-12 md-col-6"
>>>>>>> Fix test according to data change
=======
            className="md-col-6 flex flex-column justify-center col-12"
>>>>>>> Fix ProductHero test
>
            <h2
                        className="block-headline mb3"
            >
                        foo
            </h2>
            <p
                        className="block-subheadline"
                        dangerouslySetInnerHTML={
                                    Object {
                                                "__html": "<p>foo</p>
                                    ",
                                              }
                        }
            />
</div>,
          <Image
            alt="foo illustration"
            bg={false}
            className="z-overlay col-4 mt2"
            onImgLoad={[Function]}
            src="foo?w=1400&fm=png&q=90"
            style={
                        Object {
                                    "transform": "translateY(0%)",
                                  }
            }
/>,
        ],
<<<<<<< HEAD
<<<<<<< HEAD
        "className": "flex container-width py4",
=======
        "className": "flex container-width",
>>>>>>> Fix test according to data change
=======
        "className": "flex container-width py4",
>>>>>>> Fix ProductHero test
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h2
                className="block-headline mb3"
>
                foo
</h2>,
              <p
                className="block-subheadline"
                dangerouslySetInnerHTML={
                                Object {
                                                "__html": "<p>foo</p>
                                ",
                                              }
                }
/>,
            ],
<<<<<<< HEAD
<<<<<<< HEAD
            "className": "md-col-6 flex flex-column justify-center col-12",
=======
            "className": "flex flex-column justify-center col-12 md-col-6",
>>>>>>> Fix test according to data change
=======
            "className": "md-col-6 flex flex-column justify-center col-12",
>>>>>>> Fix ProductHero test
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "foo",
                "className": "block-headline mb3",
              },
              "ref": null,
              "rendered": "foo",
              "type": "h2",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "block-subheadline",
                "dangerouslySetInnerHTML": Object {
                  "__html": "<p>foo</p>
",
                },
              },
              "ref": null,
              "rendered": null,
              "type": "p",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "alt": "foo illustration",
            "bg": false,
            "children": null,
            "className": "z-overlay col-4 mt2",
            "onImgLoad": [Function],
            "src": "foo?w=1400&fm=png&q=90",
            "style": Object {
              "transform": "translateY(0%)",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
<<<<<<< HEAD
<<<<<<< HEAD
=======
>>>>>>> Add PressCard test
          className="flex container-width py4"
=======
          className="flex container-width"
>>>>>>> Fix test according to data change
=======
          className="flex container-width py4"
>>>>>>> Fix ProductHero test
>
          <div
                    className="md-col-6 flex flex-column justify-center col-12"
          >
                    <h2
                              className="block-headline mb3"
                    >
                              foo
                    </h2>
                    <div
                              className="markdown-block"
                              dangerouslySetInnerHTML={
                                        Object {
                                                  "__html": "<p>foo</p>
                                        ",
                                                }
                              }
                    />
                    <div
                              className="flex flex-row flex-wrap items-center"
                    >
                              
                    </div>
          </div>
          <Image
                    alt="foo illustration"
                    bg={false}
                    className="z-overlay col-4 mt2"
                    onImgLoad={[Function]}
                    src="foo?w=1400&fm=png&q=90"
                    style={
                              Object {
                                        "transform": "translateY(0%)",
                                      }
                    }
          />
</div>,
        "className": "flex flex-row justify-center drip",
        "style": Object {
          "zIndex": 0,
        },
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="md-col-6 flex flex-column justify-center col-12"
>
              <h2
                            className="block-headline mb3"
              >
                            foo
              </h2>
              <div
                            className="markdown-block"
                            dangerouslySetInnerHTML={
                                          Object {
                                                        "__html": "<p>foo</p>
                                          ",
                                                      }
                            }
              />
              <div
                            className="flex flex-row flex-wrap items-center"
              >
                            
              </div>
</div>,
            <Image
              alt="foo illustration"
              bg={false}
              className="z-overlay col-4 mt2"
              onImgLoad={[Function]}
              src="foo?w=1400&fm=png&q=90"
              style={
                            Object {
                                          "transform": "translateY(0%)",
                                        }
              }
/>,
          ],
          "className": "flex container-width py4",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h2
                  className="block-headline mb3"
>
                  foo
</h2>,
                <div
                  className="markdown-block"
                  dangerouslySetInnerHTML={
                                    Object {
                                                      "__html": "<p>foo</p>
                                    ",
                                                    }
                  }
/>,
<<<<<<< HEAD
<<<<<<< HEAD
                <div
                  className="flex flex-row flex-wrap items-center"
>
                  
</div>,
=======
                null,
>>>>>>> Add PressCard test
=======
>>>>>>> Fix test according to data change
              ],
              "className": "md-col-6 flex flex-column justify-center col-12",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "foo",
                  "className": "block-headline mb3",
                },
                "ref": null,
                "rendered": "foo",
                "type": "h2",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "markdown-block",
                  "dangerouslySetInnerHTML": Object {
                    "__html": "<p>foo</p>
",
                  },
                },
                "ref": null,
                "rendered": null,
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    null,
                    null,
                  ],
                  "className": "flex flex-row flex-wrap items-center",
                },
                "ref": null,
                "rendered": Array [
                  null,
                  null,
                ],
                "type": "div",
              },
              null,
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "alt": "foo illustration",
              "bg": false,
              "children": null,
              "className": "z-overlay col-4 mt2",
              "onImgLoad": [Function],
              "src": "foo?w=1400&fm=png&q=90",
              "style": Object {
                "transform": "translateY(0%)",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
      null,
    ],
    "type": "div",
<<<<<<< HEAD
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="flex container-width py4"
>
            <div
                        className="flex flex-column justify-center col-12 md-col-6"
            >
                        <h2
                                    className="block-headline mb3"
                        >
                                    foo
                        </h2>
                        <p
                                    className="block-subheadline"
                                    dangerouslySetInnerHTML={
                                                Object {
                                                            "__html": "<p>foo</p>
                                                ",
                                                          }
                                    }
                        />
                        <div
                                    className="flex flex-row flex-wrap items-center"
                        >
                                    
                        </div>
            </div>
            <Image
                        alt="foo illustration"
                        bg={false}
                        className="col-4 z-sub-nav mt2 mx-auto my-auto"
                        onImgLoad={[Function]}
                        src="foo?w=1400&fm=png&q=90"
                        style={
                                    Object {
                                                "transform": "translate(0%, 0%)",
                                              }
                        }
            />
</div>,
          null,
        ],
        "className": "flex justify-center",
        "style": Object {
          "zIndex": 0,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="flex flex-column justify-center col-12 md-col-6"
>
                <h2
                                className="block-headline mb3"
                >
                                foo
                </h2>
                <p
                                className="block-subheadline"
                                dangerouslySetInnerHTML={
                                                Object {
                                                                "__html": "<p>foo</p>
                                                ",
                                                              }
                                }
                />
                <div
                                className="flex flex-row flex-wrap items-center"
                >
                                
                </div>
</div>,
              <Image
                alt="foo illustration"
                bg={false}
                className="col-4 z-sub-nav mt2 mx-auto my-auto"
                onImgLoad={[Function]}
                src="foo?w=1400&fm=png&q=90"
                style={
                                Object {
                                                "transform": "translate(0%, 0%)",
                                              }
                }
/>,
            ],
            "className": "flex container-width py4",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h2
                    className="block-headline mb3"
>
                    foo
</h2>,
                  <p
                    className="block-subheadline"
                    dangerouslySetInnerHTML={
                                        Object {
                                                            "__html": "<p>foo</p>
                                        ",
                                                          }
                    }
/>,
                  <div
                    className="flex flex-row flex-wrap items-center"
>
                    
</div>,
                ],
                "className": "flex flex-column justify-center col-12 md-col-6",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "foo",
                    "className": "block-headline mb3",
                  },
                  "ref": null,
                  "rendered": "foo",
                  "type": "h2",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "block-subheadline",
                    "dangerouslySetInnerHTML": Object {
                      "__html": "<p>foo</p>
",
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "p",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      null,
                      null,
                    ],
                    "className": "flex flex-row flex-wrap items-center",
                  },
                  "ref": null,
                  "rendered": Array [
                    null,
                    null,
                  ],
                  "type": "div",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "alt": "foo illustration",
                "bg": false,
                "children": null,
                "className": "col-4 z-sub-nav mt2 mx-auto my-auto",
                "onImgLoad": [Function],
                "src": "foo?w=1400&fm=png&q=90",
                "style": Object {
                  "transform": "translate(0%, 0%)",
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
        null,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`renders without data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ImageText
    block={
        Object {
            "fields": Object {
              "backgroundColor": "pink",
              "buttonColor": "peach",
              "buttonLabel": "",
              "buttonLink": "",
              "drip": false,
              "fullImage": false,
              "image": Object {
                "fields": Object {
                  "file": Object {
                    "url": "",
                  },
                  "title": "",
                },
                "sys": Object {
                  "id": "",
                },
              },
              "imagePosition": 0,
              "isReverseArrangement": false,
              "linkedTextLabel": "",
              "linkedTextLink": "",
              "text": "",
              "title": "",
            },
          }
    }
    setRef={[Function]}
    z={1}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
                className="md-col-5 flex flex-column justify-center col-12"
        >
                <h2
                        className="block-headline mb3"
                />
                <p
                        className="block-subheadline"
                        dangerouslySetInnerHTML={
                                Object {
                                        "__html": "",
                                      }
                        }
                />
        </div>
        <Image
                alt=" illustration"
                bg={false}
                className="z-overlay col-4 mt2"
                onImgLoad={[Function]}
                src="?w=1400&fm=png&q=90"
                style={
                        Object {
                                "transform": "translateY(0%)",
                              }
                }
        />
</div>,
      "className": "flex flex-row justify-center drip",
      "style": Object {
        "zIndex": 1,
      },
    },
    "ref": null,
    "rendered": Object {
=======
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
>>>>>>> Add PressCard test
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
<<<<<<< HEAD
            className="md-col-5 flex flex-column justify-center col-12"
=======
            className="flex container-width py4"
>>>>>>> Add PressCard test
>
            <div
                        className="flex flex-column justify-center col-12 md-col-6"
            >
                        <h2
                                    className="block-headline mb3"
                        >
                                    foo
                        </h2>
                        <p
                                    className="block-subheadline"
                                    dangerouslySetInnerHTML={
                                                Object {
                                                            "__html": "<p>foo</p>
                                                ",
                                                          }
                                    }
                        />
            </div>
            <Image
                        alt="foo illustration"
                        bg={false}
                        className="col-4 z-sub-nav mt2 mx-auto my-auto"
                        onImgLoad={[Function]}
                        src="foo?w=1400&fm=png&q=90"
                        style={
                                    Object {
                                                "transform": "translate(0%, 0%)",
                                              }
                        }
            />
</div>,
<<<<<<< HEAD
          <Image
            alt=" illustration"
            bg={false}
            className="z-overlay col-4 mt2"
            onImgLoad={[Function]}
            src="?w=1400&fm=png&q=90"
            style={
                        Object {
                                    "transform": "translate(0%, 0%)",
                                  }
        "className": "flex container-width py4",
=======
          null,
        ],
        "className": "flex justify-center",
        "style": Object {
          "zIndex": 0,
        },
>>>>>>> Add PressCard test
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="flex flex-column justify-center col-12 md-col-6"
>
                <h2
                                className="block-headline mb3"
                >
                                foo
                </h2>
                <p
                                className="block-subheadline"
                                dangerouslySetInnerHTML={
                                                Object {
                                                                "__html": "<p>foo</p>
                                                ",
                                                              }
                                }
                />
</div>,
              <Image
                alt="foo illustration"
                bg={false}
                className="col-4 z-sub-nav mt2 mx-auto my-auto"
                onImgLoad={[Function]}
                src="foo?w=1400&fm=png&q=90"
                style={
                                Object {
                                                "transform": "translate(0%, 0%)",
                                              }
                }
/>,
            ],
<<<<<<< HEAD
            "className": "md-col-5 flex flex-column justify-center col-12",
=======
            "className": "flex container-width py4",
>>>>>>> Add PressCard test
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h2
                    className="block-headline mb3"
>
                    foo
</h2>,
                  <p
                    className="block-subheadline"
                    dangerouslySetInnerHTML={
                                        Object {
                                                            "__html": "<p>foo</p>
                                        ",
                                                          }
                    }
/>,
                  null,
                ],
                "className": "flex flex-column justify-center col-12 md-col-6",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "foo",
                    "className": "block-headline mb3",
                  },
                  "ref": null,
                  "rendered": "foo",
                  "type": "h2",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "block-subheadline",
                    "dangerouslySetInnerHTML": Object {
                      "__html": "<p>foo</p>
",
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "p",
                },
                null,
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "alt": "foo illustration",
                "bg": false,
                "children": null,
                "className": "col-4 z-sub-nav mt2 mx-auto my-auto",
                "onImgLoad": [Function],
                "src": "foo?w=1400&fm=png&q=90",
                "style": Object {
                  "transform": "translate(0%, 0%)",
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
        null,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
<<<<<<< HEAD
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
=======
}
`;

exports[`renders without data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ImageText
    block={
        Object {
            "fields": Object {
              "backgroundColor": "pink",
              "buttonColor": "peach",
              "buttonLabel": "",
              "buttonLink": "",
              "drip": false,
              "fullImage": false,
              "image": Object {
                "fields": Object {
                  "file": Object {
                    "url": "",
                  },
                  "title": "",
                },
                "sys": Object {
                  "id": "",
                },
              },
              "imagePosition": 0,
              "isReverseArrangement": false,
              "text": "",
              "title": "",
            },
          }
    }
    z={1}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="flex container-width py4"
>
        <div
<<<<<<< HEAD
<<<<<<< HEAD
>>>>>>> Add PressCard test
          className="flex container-width py4"
=======
                className="flex flex-column justify-center col-12 md-col-6"
=======
                className="md-col-5 flex flex-column justify-center col-12"
>>>>>>> Fix ProductHero test
        >
                <h2
                        className="block-headline mb3"
                />
                <p
                        className="block-subheadline"
                        dangerouslySetInnerHTML={
                                Object {
                                        "__html": "",
                                      }
                        }
                />
        </div>
        <Image
                alt=" illustration"
                bg={false}
                className="z-overlay col-4 mt2"
                onImgLoad={[Function]}
                src="?w=1400&fm=png&q=90"
                style={
                        Object {
                                "transform": "translateY(0%)",
                              }
                }
        />
</div>,
      "className": "flex flex-row justify-center drip",
      "style": Object {
        "zIndex": 1,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="md-col-5 flex flex-column justify-center col-12"
>
            <h2
                        className="block-headline mb3"
            />
            <p
                        className="block-subheadline"
                        dangerouslySetInnerHTML={
                                    Object {
                                                "__html": "",
                                              }
                        }
            />
</div>,
          <Image
            alt=" illustration"
            bg={false}
            className="z-overlay col-4 mt2"
            onImgLoad={[Function]}
            src="?w=1400&fm=png&q=90"
            style={
                        Object {
                                    "transform": "translate(0%, 0%)",
                                  }
        "className": "flex container-width py4",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h2
                className="block-headline mb3"
/>,
              <p
                className="block-subheadline"
                dangerouslySetInnerHTML={
                                Object {
                                                "__html": "",
                                              }
                }
/>,
            ],
            "className": "md-col-5 flex flex-column justify-center col-12",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "",
                "className": "block-headline mb3",
              },
              "ref": null,
              "rendered": "",
              "type": "h2",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "block-subheadline",
                "dangerouslySetInnerHTML": Object {
                  "__html": "",
                },
              },
              "ref": null,
              "rendered": null,
              "type": "p",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "alt": " illustration",
            "bg": false,
            "children": null,
            "className": "z-overlay col-4 mt2",
            "onImgLoad": [Function],
            "src": "?w=1400&fm=png&q=90",
            "style": Object {
              "transform": "translateY(0%)",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
<<<<<<< HEAD
          className="flex container-width"
>>>>>>> Fix test according to data change
=======
          className="flex container-width py4"
>>>>>>> Fix ProductHero test
>
          <div
                    className="flex flex-column justify-center col-12 md-col-5"
          >
                    <h2
                              className="block-headline mb3"
                    />
                    <div
                              className="markdown-block"
                              dangerouslySetInnerHTML={
                                        Object {
                                                  "__html": "",
                                                }
                              }
                    />
                    <div
                              className="flex flex-row flex-wrap items-center"
                    >
                              
                    </div>
          </div>
          <Image
                    alt=" illustration"
                    bg={false}
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
                    className="z-overlay col-4 mt2"
=======
<<<<<<< HEAD
<<<<<<< HEAD
                    className="z-overlay col-4 mt2"
=======
                    className="col-6 z-sub-nav mt2 mx-auto"
>>>>>>> Fix ProductHero test
=======
                    className="col-6 z-sub-nav mt2 mx-auto my-auto"
>>>>>>> Add test
>>>>>>> Add test
=======
                    className="col-6 z-sub-nav mt2 mx-auto my-auto"
>>>>>>> Add PressCard test
=======
                    className="z-overlay col-4 mt2"
>>>>>>> Fix test according to data change
                    onImgLoad={[Function]}
                    src="?w=1400&fm=png&q=90"
                    style={
                              Object {
                                        "transform": "translateY(0%)",
                                      }
                    }
          />
</div>,
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
=======
<<<<<<< HEAD
<<<<<<< HEAD
        "className": "flex flex-row justify-center drip",
=======
>>>>>>> Add test
        "className": "flex flex-row justify-center",
        "style": Object {
<<<<<<< HEAD
    },
    "ref": null,
=======
          "zIndex": 1,
        },
=======
=======
>>>>>>> Add PressCard test
        null,
      ],
      "className": "flex justify-center",
      "style": Object {
        "zIndex": 1,
<<<<<<< HEAD
>>>>>>> Add test
      },
    },
    "ref": [Function],
>>>>>>> Add test
=======
=======
        "className": "flex flex-row justify-center drip",
        "style": Object {
          "zIndex": 1,
        },
>>>>>>> Fix test according to data change
      },
=======
        "className": "flex flex-row justify-center",
        "style": Object {
>>>>>>> Fix ProductHero test
    },
    "ref": null,
>>>>>>> Add PressCard test
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="flex flex-column justify-center col-12 md-col-5"
>
              <h2
                            className="block-headline mb3"
              />
              <div
                            className="markdown-block"
                            dangerouslySetInnerHTML={
                                          Object {
                                                        "__html": "",
                                                      }
                            }
              />
              <div
                            className="flex flex-row flex-wrap items-center"
              >
                            
              </div>
</div>,
            <Image
              alt=" illustration"
              bg={false}
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
              className="z-overlay col-4 mt2"
=======
<<<<<<< HEAD
<<<<<<< HEAD
              className="z-overlay col-4 mt2"
=======
              className="col-6 z-sub-nav mt2 mx-auto"
>>>>>>> Fix ProductHero test
=======
              className="col-6 z-sub-nav mt2 mx-auto my-auto"
>>>>>>> Add test
>>>>>>> Add test
=======
              className="col-6 z-sub-nav mt2 mx-auto my-auto"
>>>>>>> Add PressCard test
=======
              className="z-overlay col-4 mt2"
>>>>>>> Fix test according to data change
              onImgLoad={[Function]}
              src="?w=1400&fm=png&q=90"
              style={
                            Object {
                                          "transform": "translateY(0%)",
                                        }
              }
/>,
          ],
          "className": "flex container-width py4",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h2
                  className="block-headline mb3"
/>,
                <div
                  className="markdown-block"
                  dangerouslySetInnerHTML={
                                    Object {
                                                      "__html": "",
                                                    }
                  }
/>,
<<<<<<< HEAD
                <div
                  className="flex flex-row flex-wrap items-center"
>
                  
</div>,
=======
                null,
>>>>>>> Add PressCard test
              ],
              "className": "flex flex-column justify-center col-12 md-col-5",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "",
                  "className": "block-headline mb3",
                },
                "ref": null,
                "rendered": "",
                "type": "h2",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "markdown-block",
                  "dangerouslySetInnerHTML": Object {
                    "__html": "",
                  },
                },
                "ref": null,
                "rendered": null,
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    null,
                    null,
                  ],
                  "className": "flex flex-row flex-wrap items-center",
                },
                "ref": null,
                "rendered": Array [
                  null,
                  null,
                ],
                "type": "div",
              },
              null,
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "alt": " illustration",
              "bg": false,
              "children": null,
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
=======
<<<<<<< HEAD
<<<<<<< HEAD
>>>>>>> Add test
              "className": "z-overlay col-4 mt2",
              "onImgLoad": [Function],
              "src": "?w=1400&fm=png&q=90",
              "style": Object {
                "transform": "translateY(0%)",
<<<<<<< HEAD
=======
=======
              "className": "col-6 z-sub-nav mt2 mx-auto",
=======
              "className": "col-6 z-sub-nav mt2 mx-auto my-auto",
>>>>>>> Add test
              "onImgLoad": [Function],
              "src": "?w=1400&fm=png&q=90",
              "style": Object {
                "transform": "translate(0%, 0%)",
>>>>>>> Fix ProductHero test
>>>>>>> Add test
=======
              "className": "col-6 z-sub-nav mt2 mx-auto my-auto",
              "onImgLoad": [Function],
              "src": "?w=1400&fm=png&q=90",
              "style": Object {
                "transform": "translate(0%, 0%)",
>>>>>>> Add PressCard test
=======
              "className": "z-overlay col-4 mt2",
              "onImgLoad": [Function],
              "src": "?w=1400&fm=png&q=90",
              "style": Object {
                "transform": "translateY(0%)",
>>>>>>> Fix test according to data change
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
      null,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="flex container-width py4"
>
            <div
                        className="flex flex-column justify-center col-12 md-col-5"
            >
                        <h2
                                    className="block-headline mb3"
                        />
<<<<<<< HEAD
<<<<<<< HEAD
                        <p
                                    className="block-subheadline"
=======
                        <div
                                    className="markdown-block"
>>>>>>> Add test
=======
                        <p
                                    className="block-subheadline"
>>>>>>> Add PressCard test
                                    dangerouslySetInnerHTML={
                                                Object {
                                                            "__html": "",
                                                          }
                                    }
                        />
<<<<<<< HEAD
                        <div
                                    className="flex flex-row flex-wrap items-center"
                        >
                                    
                        </div>
=======
>>>>>>> Add PressCard test
            </div>
            <Image
                        alt=" illustration"
                        bg={false}
                        className="col-6 z-sub-nav mt2 mx-auto my-auto"
                        onImgLoad={[Function]}
                        src="?w=1400&fm=png&q=90"
                        style={
                                    Object {
                                                "transform": "translate(0%, 0%)",
                                              }
                        }
            />
</div>,
          null,
        ],
        "className": "flex justify-center",
        "style": Object {
          "zIndex": 1,
        },
      },
<<<<<<< HEAD
<<<<<<< HEAD
      "ref": null,
=======
      "ref": [Function],
>>>>>>> Add test
=======
      "ref": null,
>>>>>>> Add PressCard test
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="flex flex-column justify-center col-12 md-col-5"
>
                <h2
                                className="block-headline mb3"
                />
<<<<<<< HEAD
<<<<<<< HEAD
                <p
                                className="block-subheadline"
=======
                <div
                                className="markdown-block"
>>>>>>> Add test
=======
                <p
                                className="block-subheadline"
>>>>>>> Add PressCard test
                                dangerouslySetInnerHTML={
                                                Object {
                                                                "__html": "",
                                                              }
                                }
                />
<<<<<<< HEAD
                <div
                                className="flex flex-row flex-wrap items-center"
                >
                                
                </div>
=======
>>>>>>> Add PressCard test
</div>,
              <Image
                alt=" illustration"
                bg={false}
                className="col-6 z-sub-nav mt2 mx-auto my-auto"
                onImgLoad={[Function]}
                src="?w=1400&fm=png&q=90"
                style={
                                Object {
                                                "transform": "translate(0%, 0%)",
                                              }
                }
/>,
            ],
            "className": "flex container-width py4",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h2
                    className="block-headline mb3"
/>,
<<<<<<< HEAD
<<<<<<< HEAD
                  <p
                    className="block-subheadline"
=======
                  <div
                    className="markdown-block"
>>>>>>> Add test
=======
                  <p
                    className="block-subheadline"
>>>>>>> Add PressCard test
                    dangerouslySetInnerHTML={
                                        Object {
                                                            "__html": "",
                                                          }
                    }
/>,
<<<<<<< HEAD
                  <div
                    className="flex flex-row flex-wrap items-center"
>
                    
</div>,
=======
                  null,
>>>>>>> Add PressCard test
                ],
                "className": "flex flex-column justify-center col-12 md-col-5",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "",
                    "className": "block-headline mb3",
                  },
                  "ref": null,
                  "rendered": "",
                  "type": "h2",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
<<<<<<< HEAD
<<<<<<< HEAD
                    "className": "block-subheadline",
=======
                    "className": "markdown-block",
>>>>>>> Add test
=======
                    "className": "block-subheadline",
>>>>>>> Add PressCard test
                    "dangerouslySetInnerHTML": Object {
                      "__html": "",
                    },
                  },
                  "ref": null,
                  "rendered": null,
<<<<<<< HEAD
<<<<<<< HEAD
                  "type": "p",
=======
                  "type": "div",
>>>>>>> Add test
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      null,
                      null,
                    ],
                    "className": "flex flex-row flex-wrap items-center",
                  },
                  "ref": null,
                  "rendered": Array [
                    null,
                    null,
                  ],
                  "type": "div",
                },
=======
                  "type": "p",
                },
                null,
>>>>>>> Add PressCard test
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "alt": " illustration",
                "bg": false,
                "children": null,
                "className": "col-6 z-sub-nav mt2 mx-auto my-auto",
                "onImgLoad": [Function],
                "src": "?w=1400&fm=png&q=90",
                "style": Object {
                  "transform": "translate(0%, 0%)",
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
        null,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
